@@ -509,7 +509,7 @@ subroutine readgth (iunps, np, upf)
   !-----------------------------------------------------------------------
   !
   USE kinds,        ONLY: dp
-  USE constants,    ONLY: e2
+  USE constants,    ONLY: e2, tpi
   USE parameters,   ONLY: lmaxx
   USE funct,        ONLY: set_dft_from_name, dft_is_hybrid
   USE pseudo_types, ONLY: pseudo_upf
@@ -523,7 +523,7 @@ subroutine readgth (iunps, np, upf)
   ! Local variables
   integer  :: ios, pspdat, pspcod, pspxc, lmax, lloc, mmax, ii, jj, ll, nn, nnonloc, &
               nprl, os, ns, iv, jv
-  real(dp) :: znucl, r2well, rloc, rrl, cc(4)
+  real(dp) :: rcore, qcore, rc2, prefact, znucl, r2well, rloc, rrl, cc(4)
   character(len=256)            :: info
   character(len=  1), parameter :: ch10=char(10), spdf(0:3) = ['S','P','D','F']
   character(len=  2), external  :: atom_name
@@ -560,6 +560,14 @@ subroutine readgth (iunps, np, upf)
   call gth_grid_for_rho(upf,znucl)
 
   read (iunps, *, err=400) pspcod,pspxc,lmax,lloc,mmax,r2well
+  IF ( pspcod /= 10 .AND. pspcod /= 12 ) &
+     call errore ('readgth', 'unknown/invalid pspcod:', pspcod )
+  IF ( pspcod == 12 ) THEN
+     ! pseudo with NLCC
+     upf%nlcc=.true.
+     upf%generated="New Soft-Accurate NLCC pseudopotentials, generated by Santanu Saha"
+     upf%author=upf%author//"/Saha"
+  ENDIF
   IF ( lmax-1 > lmaxx ) call errore ('readgth', 'strange lmax', lmax-1)
   IF ( lmax == lloc) THEN
      upf%lmax = lmax-1
@@ -580,6 +588,8 @@ subroutine readgth (iunps, np, upf)
      upf%dft = 'PBE'
   ELSE IF (pspxc == 18) THEN
      upf%dft = 'BLYP'
+  ELSE IF (pspxc == -101130) THEN ! PBE from libXC
+     upf%dft = 'PBE'
   ELSE
      call errore ('readgth', 'pspxc cod. cannot be understood', abs (np) )
   ENDIF
@@ -619,6 +629,16 @@ subroutine readgth (iunps, np, upf)
     !&   '        k22, k23 =', (kij(ll,2,jj),jj=2,3),ch10,&
     !&   '             k33 =', (kij(ll,3,jj),jj=3,3)
   end do prjloop
+  !
+  if (upf%nlcc) then
+    read (iunps, *, err=400) rcore, qcore
+    ALLOCATE ( upf%rho_atc(upf%mesh) )
+    rc2 = rcore**2
+    prefact = qcore * (znucl-upf%zp) / (sqrt(tpi)*rcore)**3
+    do ii=1,upf%mesh
+      upf%rho_atc(ii) = prefact * exp(-0.5_dp * upf%r(ii)**2 / rc2)
+    enddo
+  end if
   !
   allocate(upf%lll(upf%nbeta), upf%els_beta(upf%nbeta), upf%dion(upf%nbeta,upf%nbeta))
   allocate(gth_p(ns)%lll(upf%nbeta), gth_p(ns)%ipr(upf%nbeta))
